<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/purple">

    <FrameLayout
        android:id="@+id/code_frame"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/code_languages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_radius_lavender"
            android:popupBackground="@color/lavender" />

        <ImageView
            android:id="@+id/code_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arrow"
            android:src="@drawable/ic_arrow_down"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="8dp" />
    </FrameLayout>

    <EditText
        android:id="@+id/codeInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border_radius_white"
        android:fontFamily="monospace"
        android:gravity="top"
        android:hint="@string/code_env"
        android:textColor="@color/black"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/code_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/stdin"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/stdin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:background="@drawable/border_radius_white"
        android:hint="@string/code_input"
        android:padding="10dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/codeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/code_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="@color/fuchsia"
        android:text="@string/code_btn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/stdin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/code_output"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:background="@drawable/border_radius_white"
        android:fontFamily="monospace"
        android:hint="@string/code_output"
        android:textColor="@color/black"
        android:padding="8dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/code_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
