<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/purple"
    tools:context=".quizzes.ui.view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible" />

        <!-- Section 1 -->
        <TextView
            android:id="@+id/title_section_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:text="@string/frontend_section"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_section_1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_section_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_section_1"
            app:layout_constraintTop_toBottomOf="@id/title_section_1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_section_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_section_1" />

        <!-- Section 2 -->
        <TextView
            android:id="@+id/title_section_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/backend_section"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_section_1"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_section_1" />

        <View
            android:id="@+id/divider_section_2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_section_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_section_2"
            app:layout_constraintTop_toBottomOf="@id/title_section_2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_section_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_section_2" />

        <!-- Section 3 -->
        <TextView
            android:id="@+id/title_section_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sql_section"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_section_2"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_section_2" />

        <View
            android:id="@+id/divider_section_3"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_section_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_section_3"
            app:layout_constraintTop_toBottomOf="@id/title_section_3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_section_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_section_3" />

        <!-- Section 4 -->
        <TextView
            android:id="@+id/title_section_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cicd_section"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_section_3"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_section_3" />

        <View
            android:id="@+id/divider_section_4"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_section_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_section_4"
            app:layout_constraintTop_toBottomOf="@id/title_section_4" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_section_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_section_4" />

        <!-- Section 5 -->
        <TextView
            android:id="@+id/title_section_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/languages_section"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_section_4"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_section_4" />

        <View
            android:id="@+id/divider_section_5"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_section_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_section_5"
            app:layout_constraintTop_toBottomOf="@id/title_section_5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_section_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_section_5" />

        <!-- Section 6 -->
        <TextView
            android:id="@+id/title_section_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/others_section"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_section_5"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_section_5" />

        <View
            android:id="@+id/divider_section_6"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_section_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_section_6"
            app:layout_constraintTop_toBottomOf="@id/title_section_6" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_section_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_section_6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
